--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,21 @@
     <string name="abcde123">abcde123</string>
     <string name="kei_gmail_com">kei@gmail.com</string>
     <string-array name="spice">
-    <item>1年</item>
-    <item>2年</item>
-    <item>3年</item>
-
+        <item>1年</item>
+        <item>2年</item>
+        <item>3年</item>
     </string-array>
+
+    <string-array name="sample_array">
+        <item>医療情報学科</item>
+        <item>インターネット学科</item>
+        <item>CGデザイン学科</item>
+        <item>3DCADクリエイト学科</item>
+        <item>オフィスビジネス学科</item>
+        <item>情報処理学科</item>
+        <item>公務員ビジネス学科</item>
+        <item>医療ビジネス学科</item>
+        <item>モバイルシステムクリエイト学科</item>
+    </string-array>
+
 </resources>
